@@ -47,12 +47,17 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.2.tar.gz"
+      title="Source code of the latest stable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.8.2</a></div>
+
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.1.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.8.1</a></div>
-
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.0.tar.gz"
       title="Source code of the latest stable release">
@@ -92,12 +97,17 @@
 
       <!--<p>There is currently no separate development release.</p>-->      
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.9/tomboy-0.9.8.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.9.8</a></div>
+      
+    <h3>Past releases</h3>      
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.9/tomboy-0.9.4.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.9.4</a></div>
-      
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.4.tar.gz"
       title="Source code of the latest unstable release">
