@@ -71,6 +71,16 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>March 3rd 2008</h3>
+   	      <b>Unstable</b> version 0.9.8 released!  This represents hard code freeze until 0.10.0 is released.  New in this and previous 0.9.x releases:
+   	      <ul>
+   	        <li>Tons of stability and other bugfixes, especially in notebooks, bulleted lists, and addins</li>
+		<li>Search window and recent notes menu handle long note names better</li>
+   	        <li>Updated translations</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_9_8/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>January 14th 2008</h3>
    	      Happy new year!  <b>Unstable</b> version 0.9.4 released!  New in this and previous 0.9.x releases:
    	      <ul>
